# esp-clawtail

./: README.md  todo.md
.gitlab/ci/: build.yml
application/edge_agent/: sdkconfig.defaults
application/edge_agent/fatfs_image/router_rules/: router_rules.json
components/claw_capabilities/cap_agent_mgr/: CMakeLists.txt
components/claw_capabilities/cap_agent_mgr/src/: cap_agent_mgr.c
components/claw_modules/claw_core/src/: claw_core_agent_loop.c
components/claw_modules/claw_manager/include/: claw_agent_mgr.h  claw_session_mgr.h
components/claw_modules/claw_manager/src/: claw_agent_mgr.c  claw_session_mgr.c
components/common/app_claw/: Kconfig  app_capabilities.c  app_claw.c  app_claw_cli.c  app_lua_modules.c  idf_component.yml
components/common/display_arbiter/: display_arbiter.c
components/common/i2c_bus/: i2c_bus.c  i2c_bus.h
components/common/panel/: panel_spi.h
components/lua_modules/lua_module_ble_hid/: CMakeLists.txt  README.md  idf_component.yml
components/lua_modules/lua_module_ble_hid/lib/: ble_hid_actions.lua  ble_hid_actions.md  ble_hid_settings.lua  ble_hid_settings.md
components/lua_modules/lua_module_ble_hid/skills/ble_hid/: SKILL.md
components/lua_modules/lua_module_ble_hid/skills/ble_hid/scripts/: send_ble_hid_action.lua  update_ble_hid_binding.lua
components/lua_modules/lua_module_ble_hid/src/: lua_module_ble_hid.c
components/lua_modules/lua_module_thread/: README.md
components/lua_modules/lua_module_thread/src/: thread_sync.c
docs/: astro.config.mjs  package.json
docs/src/content/docs/en/tutorial/: get-started.mdx
(+7 files in other folders)
